# vpn9-app

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  styles.css
.github/workflows/: release.yml
packaging/linux/scripts/deb/: postinst  postrm  prerm
packaging/linux/scripts/rpm/: post  postun  preun
packaging/linux/systemd/: vpn9-daemon.service
packaging/macos/: com.vpn9.daemon.plist  uninstall.sh
packaging/macos/scripts/: postinstall  preinstall
src/: app.rs
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  devices.rs  http.rs  lib.rs  main.rs  misc.rs  relays.rs  util.rs  vpn.rs  wireguard.rs
src-tauri/src/wireguard/: daemon.rs  linux.rs  macos.rs
vpn9-api/: Cargo.toml
vpn9-api/src/: client.rs  error.rs  lib.rs  models.rs
vpn9-daemon/: Cargo.toml
vpn9-daemon/src/: dns_proxy.rs  main.rs  service.rs  signals.rs
vpn9-daemon/src/backend/: linux.rs  macos.rs  mod.rs
vpn9-proto/: Cargo.toml  build.rs
vpn9-proto/proto/vpn9/: daemon.proto
vpn9-proto/src/: lib.rs
