[package]
name = "vpn9-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/vpn9/vpn9-app"
homepage = "https://vpn9.com"
documentation = "https://github.com/vpn9/vpn9-app#readme"
readme = "README.md"
categories = ["gui", "network-programming"]
keywords = ["vpn", "tauri", "rust", "desktop"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vpn9_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "fs"] }
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
keyring = "2.0"
tauri-plugin-log = "2"
log = "0.4.27"
dirs = "5.0"
base64 = "0.21"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[features]
default = ["file-fallback-aead"]
# Optional encrypted file fallback for tokens when keyring is unavailable
file-fallback-aead = [
  "dep:chacha20poly1305",
  "dep:hkdf",
]

[dependencies.chacha20poly1305]
version = "0.10"
optional = true

[dependencies.hkdf]
version = "0.12"
optional = true
