[package]
name = "vpn9-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/vpn9/vpn9-app"
homepage = "https://vpn9.com"
documentation = "https://github.com/vpn9/vpn9-app#readme"
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
url = "2"
