[package]
name = "vpn9-daemon"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["vpn9"]
repository = "https://github.com/vpn9/vpn9-app"
homepage = "https://vpn9.com"
documentation = "https://github.com/vpn9/vpn9-app#readme"

[dependencies]
anyhow = "1"
base64 = "0.22"
defguard_wireguard_rs = "0.7.7"
hex = "0.4"
log = "0.4"
simple_logger = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tonic = { version = "0.11", features = ["transport"] }
vpn9-proto = { path = "../vpn9-proto" }
signal-hook = { version = "0.3", features = ["iterator"] }
once_cell = "1"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
boringtun = "0.5.3"
core-foundation = "0.9"
system-configuration = "0.6"
